--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -52,6 +52,18 @@ html, body {
     background: #4489d0;
 }
 
+.unread {
+    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    background: #4489d0;
+    display: inline-block;
+}
+
+.active .unread {
+    background: #fff;   
+}
+
 .messages-container .message-row.active * {
     color: #fff !important; 
 }
