--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -70,6 +70,13 @@ html, body {
 .messages-container .message-row {
     padding: 8px 20px;
     border-bottom: 1px solid #eee;
+    position: relative;
+    width: 100%;
+}
+
+.messages-container .message-row.unread {
+    /*background: #f1f2f4;*/
+    color: #4489d0;
 }
 
 .messages-container .message-row.active {
@@ -99,11 +106,11 @@ html, body {
 }
 
 .message-container .message-header {
-    -webkit-flex: 1;
+/*    -webkit-flex: 1;
            flex: 1;
     min-height: 70px;
     max-height: 70px;
-    padding: 15px;
+*/    padding: 15px;
     box-shadow: 0px 1px 2px rgba(0,0,0,.1);
 }
 
@@ -114,16 +121,13 @@ html, body {
     padding: 15px;
 }
 
-.unread {
-    border-radius: 10px;
-    width: 10px;
-    height: 10px;
+.unread-line {
+    width: 4px;
     background: #4489d0;
-    display: inline-block;
-}
-
-.active .unread {
-    background: #fff;   
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .messages-container .message-top-row {
